# fastapi-langchain-rag

./: .gitignore  .gitmodules  README.md  cloudbuild.yaml  docker-compose.yml
.github/workflows/: deploy-production.yml
backend/: Dockerfile  logging_config.py  pyproject.toml
backend/app/: config.yml  init_db.py  main.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: login.py  qa copy.py  qa.py  users.py
backend/app/config/: chat.yml  ingestion.yml
backend/app/core/: config.py  db.py  security.py
backend/app/crud/: user_crud.py
backend/app/ingestion/: run.py
backend/app/ingestion/utils/: embedding_models.py
backend/app/schemas/: chat_schema.py  ingestion_schema.py
backend/app/utils/: general_helpers.py
backend/ingestion/: config.yaml  main.py  pdf_ingestion.py
backend/ingestion/core/: config.py  db.py
backend/ingestion/crud/: user_crud.py
backend/ingestion/helpers/: db.py  embedding_models.py
backend/ingestion/utils/: embedding_models.py
terraform/: README.md  main.tf  variabiles.tf
terraform/modules/cloud_build/: main.tf  variables.tf
terraform/modules/cloud_run/: main.tf  variables.tf
terraform/modules/cloud_sql/: main.tf  variabiles.tf
terraform/modules/firewall/: main.tf  variables.tf
terraform/modules/network/: main.tf  variables.tf
terraform/modules/secret_manager/: main.tf  variables.tf
