[tool.poetry]
name = "fastapi-ai-agent"
version = "0.1.0"
description = ""
authors = ["mazzasaverio <saverio3107@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
