[tool.poetry]
name = "fastapi-ai-agent"
version = "0.1.0"
description = ""
authors = ["mazzasaverio <saverio3107@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.29"
loguru = "^0.7.2"
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"
sqlmodel = "^0.0.16"
pyyaml = "^6.0.1"
langchain = "^0.1.13"
langchain-openai = "^0.1.1"
pymupdf = "^1.24.0"
pgvector = "^0.2.5"
case-converter = "^1.1.0"
python-box = "^7.1.1"
redis = "^5.0.3"
langchainhub = "^0.1.15"
python-jose = "^3.3.0"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
